--- a/sass/smartphone.scss
+++ b/sass/smartphone.scss
@@ -254,6 +254,10 @@
 
 	.stickyFooter {
 		font-size: 80%;
+
+		.frg-button {
+			font-size: 100%;
+		}
 	}
 
 	.separation {
